// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Babel Package transformer should work with child packages 1`] = `
{
  "babel": {
    "env": {
      "cjs": {
        "comments": true,
        "presets": [
          [
            "@babel/env",
            {
              "modules": "commonjs",
              "targets": {
                "node": "10",
              },
            },
          ],
        ],
      },
      "mjs": {
        "comments": false,
        "presets": [
          [
            "@babel/env",
            {
              "modules": false,
              "targets": {
                "node": "12",
              },
            },
          ],
        ],
      },
    },
    "plugins": [
      "@babel/plugin-proposal-object-rest-spread",
    ],
    "presets": [
      [
        "@babel/env",
        {
          "targets": {
            "node": "16.15.0",
          },
        },
      ],
    ],
    "sourceMaps": true,
  },
  "devDependencies": {
    "@babel/cli": "^7.17.10",
    "@babel/core": "^7.18.2",
    "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
    "@babel/preset-env": "^7.18.2",
    "@babel/register": "^7.17.7",
  },
  "main": "index",
  "metapak": {
    "data": {
      "bundleFiles": [
        "dist",
        "src",
      ],
      "childPackage": true,
      "files": "src/*.js src/**/*.js",
    },
  },
  "module": "index.mjs",
  "scripts": {
    "compile": "rimraf -f 'dist' && npm run compile:cjs && npm run compile:mjs",
    "compile:cjs": "babel --env-name=cjs --out-dir=dist --source-maps=true src",
    "compile:mjs": "babel --env-name=mjs --out-file-extension=.mjs --out-dir=dist --source-maps=true src",
  },
}
`;

exports[`Babel Package transformer should work with eslint config 1`] = `
{
  "babel": {
    "env": {
      "cjs": {
        "comments": true,
        "presets": [
          [
            "@babel/env",
            {
              "modules": "commonjs",
              "targets": {
                "node": "10",
              },
            },
          ],
        ],
      },
      "mjs": {
        "comments": false,
        "presets": [
          [
            "@babel/env",
            {
              "modules": false,
              "targets": {
                "node": "12",
              },
            },
          ],
        ],
      },
    },
    "plugins": [
      "@babel/plugin-proposal-object-rest-spread",
    ],
    "presets": [
      [
        "@babel/env",
        {
          "targets": {
            "node": "16.15.0",
          },
        },
      ],
    ],
    "sourceMaps": true,
  },
  "devDependencies": {
    "@babel/cli": "^7.17.10",
    "@babel/core": "^7.18.2",
    "@babel/eslint-parser": "^7.18.2",
    "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
    "@babel/preset-env": "^7.18.2",
    "@babel/register": "^7.17.7",
  },
  "eslintConfig": {
    "parserOptions": {
      "sourceType": "module",
    },
  },
  "greenkeeper": {
    "ignore": [
      "@babel/cli",
      "@babel/core",
      "@babel/register",
      "@babel/preset-env",
      "@babel/plugin-proposal-object-rest-spread",
      "babel-eslint",
    ],
  },
  "main": "index",
  "metapak": {
    "configs": [
      "eslint",
      "babel",
    ],
    "data": {
      "bundleFiles": [
        "dist",
        "src",
      ],
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "module": "index.mjs",
  "prettier": {
    "trailingComma": "all",
  },
  "scripts": {
    "compile": "rimraf -f 'dist' && npm run compile:cjs && npm run compile:mjs",
    "compile:cjs": "babel --env-name=cjs --out-dir=dist --source-maps=true src",
    "compile:mjs": "babel --env-name=mjs --out-file-extension=.mjs --out-dir=dist --source-maps=true src",
    "precz": "npm run compile",
    "preversion": "npm run compile",
    "test": "",
  },
}
`;

exports[`Babel Package transformer should work with jest config 1`] = `
{
  "babel": {
    "env": {
      "cjs": {
        "comments": true,
        "presets": [
          [
            "@babel/env",
            {
              "modules": "commonjs",
              "targets": {
                "node": "10",
              },
            },
          ],
        ],
      },
      "mjs": {
        "comments": false,
        "presets": [
          [
            "@babel/env",
            {
              "modules": false,
              "targets": {
                "node": "12",
              },
            },
          ],
        ],
      },
    },
    "plugins": [
      "@babel/plugin-proposal-object-rest-spread",
    ],
    "presets": [
      [
        "@babel/env",
        {
          "targets": {
            "node": "16.15.0",
          },
        },
      ],
    ],
    "sourceMaps": true,
  },
  "devDependencies": {
    "@babel/cli": "^7.17.10",
    "@babel/core": "^7.18.2",
    "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
    "@babel/preset-env": "^7.18.2",
    "@babel/register": "^7.17.7",
  },
  "greenkeeper": {
    "ignore": [
      "@babel/cli",
      "@babel/core",
      "@babel/register",
      "@babel/preset-env",
      "@babel/plugin-proposal-object-rest-spread",
      "babel-core",
    ],
  },
  "main": "index",
  "metapak": {
    "configs": [
      "babel",
      "jest",
    ],
    "data": {
      "bundleFiles": [
        "dist",
        "src",
      ],
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "module": "index.mjs",
  "scripts": {
    "compile": "rimraf -f 'dist' && npm run compile:cjs && npm run compile:mjs",
    "compile:cjs": "babel --env-name=cjs --out-dir=dist --source-maps=true src",
    "compile:mjs": "babel --env-name=mjs --out-file-extension=.mjs --out-dir=dist --source-maps=true src",
    "precz": "npm run compile",
    "preversion": "npm run compile",
    "test": "",
  },
}
`;

exports[`Babel Package transformer should work with mocha config 1`] = `
{
  "babel": {
    "env": {
      "cjs": {
        "comments": true,
        "presets": [
          [
            "@babel/env",
            {
              "modules": "commonjs",
              "targets": {
                "node": "10",
              },
            },
          ],
        ],
      },
      "mjs": {
        "comments": false,
        "presets": [
          [
            "@babel/env",
            {
              "modules": false,
              "targets": {
                "node": "12",
              },
            },
          ],
        ],
      },
    },
    "plugins": [
      "@babel/plugin-proposal-object-rest-spread",
    ],
    "presets": [
      [
        "@babel/env",
        {
          "targets": {
            "node": "16.15.0",
          },
        },
      ],
    ],
    "sourceMaps": true,
  },
  "devDependencies": {
    "@babel/cli": "^7.17.10",
    "@babel/core": "^7.18.2",
    "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
    "@babel/preset-env": "^7.18.2",
    "@babel/register": "^7.17.7",
  },
  "greenkeeper": {
    "ignore": [
      "@babel/cli",
      "@babel/core",
      "@babel/register",
      "@babel/preset-env",
      "@babel/plugin-proposal-object-rest-spread",
    ],
  },
  "main": "index",
  "metapak": {
    "configs": [
      "babel",
      "mocha",
    ],
    "data": {
      "bundleFiles": [
        "dist",
        "src",
      ],
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "module": "index.mjs",
  "scripts": {
    "compile": "rimraf -f 'dist' && npm run compile:cjs && npm run compile:mjs",
    "compile:cjs": "babel --env-name=cjs --out-dir=dist --source-maps=true src",
    "compile:mjs": "babel --env-name=mjs --out-file-extension=.mjs --out-dir=dist --source-maps=true src",
    "precz": "npm run compile",
    "preversion": "npm run compile",
    "test": "",
  },
}
`;

exports[`Babel Package transformer should work with some files 1`] = `
{
  "babel": {
    "env": {
      "cjs": {
        "comments": true,
        "presets": [
          [
            "@babel/env",
            {
              "modules": "commonjs",
              "targets": {
                "node": "10",
              },
            },
          ],
        ],
      },
      "mjs": {
        "comments": false,
        "presets": [
          [
            "@babel/env",
            {
              "modules": false,
              "targets": {
                "node": "12",
              },
            },
          ],
        ],
      },
    },
    "plugins": [
      "@babel/plugin-proposal-object-rest-spread",
    ],
    "presets": [
      [
        "@babel/env",
        {
          "targets": {
            "node": "16.15.0",
          },
        },
      ],
    ],
    "sourceMaps": true,
  },
  "devDependencies": {
    "@babel/cli": "^7.17.10",
    "@babel/core": "^7.18.2",
    "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
    "@babel/preset-env": "^7.18.2",
    "@babel/register": "^7.17.7",
  },
  "greenkeeper": {
    "ignore": [
      "@babel/cli",
      "@babel/core",
      "@babel/register",
      "@babel/preset-env",
      "@babel/plugin-proposal-object-rest-spread",
    ],
  },
  "main": "index",
  "metapak": {
    "configs": [
      "babel",
    ],
    "data": {
      "bundleFiles": [
        "src/**/*.js",
        "LICENSE",
        "README.md",
        "CHANGELOG.md",
        "dist/**/*.js",
        "dist",
        "src",
      ],
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "module": "index.mjs",
  "scripts": {
    "compile": "rimraf -f 'dist' && npm run compile:cjs && npm run compile:mjs",
    "compile:cjs": "babel --env-name=cjs --out-dir=dist --source-maps=true src",
    "compile:mjs": "babel --env-name=mjs --out-file-extension=.mjs --out-dir=dist --source-maps=true src",
    "precz": "npm run compile",
    "preversion": "npm run compile",
    "test": "",
  },
}
`;
